# browser-forensic

./: .gitignore  404.html  Cargo.toml  README.md  clippy.toml  deny.toml  finding.schema.json  index.html  mkdocs.yml  release-plz.toml  sitemap.xml
crates/br4n6/: Cargo.toml
crates/br4n6/src/: lib.rs  main.rs
crates/br4n6/tests/: actions.rs  app.rs  keymap.rs  search.rs  tagging.rs
crates/bravesess/: Cargo.toml
crates/bravesess/src/: lib.rs  main.rs
crates/bravesess/tests/: actions.rs  app.rs  keymap.rs  search.rs  tagging.rs
crates/browser-carve/: Cargo.toml
crates/browser-carve/src/: lib.rs  sqlite_carve.rs  wal_recovery.rs
crates/browser-chrome/: Cargo.toml
crates/browser-chrome/src/: autofill.rs  bookmarks.rs  cache.rs  cookies.rs  downloads.rs  extensions.rs  history.rs  lib.rs  local_state.rs  login_data.rs  session.rs  visits.rs
crates/browser-core/: Cargo.toml
crates/browser-core/src/: analyze.rs  lib.rs  sqlite.rs  test_utils.rs  timestamp.rs
crates/browser-core/tests/: open_evidence_db.rs
crates/browser-discovery/: Cargo.toml
crates/browser-discovery/src/: lib.rs
crates/browser-firefox/: Cargo.toml
crates/browser-firefox/src/: autofill.rs  bookmarks.rs  cache.rs  cookies.rs  downloads.rs  extensions.rs  history.rs  lib.rs  login_data.rs  session.rs
crates/browser-forensic-cache/: Cargo.toml
crates/browser-forensic-cache/src/: blockfile.rs  cachestorage.rs  carve.rs  decompress.rs  error.rs  firefox.rs  http_meta.rs  lib.rs  resource.rs  safari.rs  simple.rs
crates/browser-forensic-cache/tests/: cachestorage_oracle.rs  chrome_oracle.rs  firefox_oracle.rs  safari_oracle.rs
crates/browser-forensic-carve/: CHANGELOG.md  Cargo.toml
crates/browser-forensic-carve/src/: lib.rs  recovered_history.rs  sqlite_carve.rs  wal_recovery.rs
crates/browser-forensic-carve/tests/: recovery_via_sqlite_forensic.rs  sqlite_recovery_method_rename.rs
crates/browser-forensic-chrome/: CHANGELOG.md  Cargo.toml
crates/browser-forensic-chrome/src/: autofill.rs  bookmarks.rs  cache.rs  cookies.rs  dips.rs  downloads.rs  extensions.rs  favicons.rs  history.rs  lib.rs  local_state.rs  login_data.rs  media_history.rs  nel.rs  network_action_predictor.rs  network_persistent_state.rs  permissions.rs  preferences.rs  session.rs  shortcuts.rs  top_sites.rs  transport_security.rs  visits.rs  web_data.rs
crates/browser-forensic-chrome/tests/: coverage_oracle.rs  recovered_domains_oracle.rs
crates/browser-forensic-cli/: CHANGELOG.md  Cargo.toml
crates/browser-forensic-cli/src/: bundle.rs  checkpoint.rs  cli.rs  completions.rs  detect.rs  export.rs  find.rs  investigate.rs  keys.rs  lib.rs  main.rs  output.rs  progress.rs  recover.rs  render.rs  report.rs  selectors.rs  tui.rs
crates/browser-forensic-cli/tests/: actions.rs  app.rs  artifact_namespace.rs  bare_path_p7.rs  br4n6_cli.rs  cachestorage_cli.rs  clean_break_p5b.rs  cli_decisions.rs  cli_subcommands.rs  completions_p8.rs  credentials_oracle.rs  decrypt_optin.rs  detect_p7.rs  export.rs  find.rs  find_iocs.rs  find_supersedes.rs  finding_schema_sync.rs  firefox_m17.rs  investigate.rs  keymap.rs  keys_decrypt_p6.rs  logins_keys_p6.rs  manifest.rs  memory_cmd.rs  output_cli.rs  output_engine.rs  reconstruct_cli.rs  reconstruct_oracle.rs  recover.rs  report.rs  report_bundle_p8.rs  schema_sync.rs  search.rs  search_extract.rs  selectors_p7.rs  shell.rs  tagging.rs  timeline.rs
crates/browser-forensic-core/: CHANGELOG.md  Cargo.toml
crates/browser-forensic-core/examples/: gen_finding_schema.rs
crates/browser-forensic-core/src/: finding.rs  lib.rs  reconstruct.rs  sqlite.rs  test_utils.rs  timestamp.rs
crates/browser-forensic-core/tests/: open_evidence_db.rs
crates/browser-forensic-correlate/: Cargo.toml
crates/browser-forensic-correlate/src/: graph.rs  host.rs  lib.rs  render.rs  rollup.rs  timeline.rs
crates/browser-forensic-decrypt/: Cargo.toml
crates/browser-forensic-decrypt/src/: asn1.rs  chromium_macos.rs  chromium_win.rs  domain_hash.rs  dpapi.rs  error.rs  lib.rs  nss.rs
crates/browser-forensic-decrypt/tests/: chromium_win_dpapi.rs  chromium_win_gcm.rs
crates/browser-forensic-discovery/: CHANGELOG.md  Cargo.toml
crates/browser-forensic-discovery/src/: lib.rs
crates/browser-forensic-firefox/: CHANGELOG.md  Cargo.toml
crates/browser-forensic-firefox/src/: annotations.rs  autofill.rs  bookmarks.rs  cache.rs  cookies.rs  deleted_bookmarks.rs  downloads.rs  extensions.rs  history.rs  lib.rs  login_data.rs  mozlz4.rs  permissions.rs  preferences.rs  session.rs  site_security.rs  typed_input.rs  visits.rs
crates/browser-forensic-firefox/tests/: dumpzilla_differential.rs  real_profile_gated.rs
crates/browser-forensic-image/: Cargo.toml
crates/browser-forensic-image/src/: lib.rs
crates/browser-forensic-imagecarve/: Cargo.toml
crates/browser-forensic-imagecarve/fuzz/: Cargo.toml
crates/browser-forensic-imagecarve/src/: lib.rs
crates/browser-forensic-integrity/: CHANGELOG.md  Cargo.toml
crates/browser-forensic-interpret/: Cargo.toml
crates/browser-forensic-manifest/: Cargo.toml
crates/browser-forensic-mcp/: CHANGELOG.md  Cargo.toml
crates/browser-forensic-mcp/src/: lib.rs  (+3 more)
crates/browser-forensic-memory/: CHANGELOG.md  Cargo.toml
crates/browser-forensic-py/: .gitignore  Cargo.toml  pyproject.toml
crates/browser-forensic-reconstruct/: Cargo.toml
crates/browser-forensic-safari/: CHANGELOG.md  Cargo.toml
crates/browser-forensic-search/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_blockfile.rs  fuzz_cache_decompress.rs  fuzz_cache_entry.rs  fuzz_cachestorage.rs  fuzz_carve_sqlite.rs  fuzz_decrypt_asn1.rs  fuzz_decrypt_dpapi.rs  fuzz_firefox_cache2.rs  fuzz_firefox_mozlz4.rs  fuzz_firefox_session.rs  fuzz_firefox_site_security.rs  fuzz_forensic.rs  fuzz_indexeddb_key.rs  fuzz_indexeddb_v8.rs  fuzz_integrity.rs  fuzz_network_persistent_state.rs  fuzz_reconstruct_html.rs  fuzz_reconstruct_warc.rs  fuzz_reporting_and_nel.rs  fuzz_safari_response_object.rs  fuzz_search_ioc.rs  fuzz_sqlite_header.rs  fuzz_sqlite_history.rs  fuzz_transport_security.rs
(+237 files in other folders)
