[workspace]
members = [
    "crates/browser-forensic-core",
    "crates/browser-forensic-chrome",
    "crates/browser-forensic-cache",
    "crates/browser-forensic-firefox",
    "crates/browser-forensic-safari",
    "crates/browser-forensic-discovery",
    "crates/browser-forensic-integrity",
    "crates/browser-forensic-carve",
    "crates/browser-forensic-interpret",
    "crates/browser-forensic-memory",
    "crates/browser-forensic-storage",
    "crates/browser-forensic-triage",
    "crates/browser-forensic-cli",
    "crates/browser-forensic-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/browser-forensic"

[workspace.dependencies]
anyhow = "1"
dirs = "6"
lz4_flex = "0.11"
plist = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
assert_cmd = "2"
tempfile = "3"
forensicnomicon = { version = "1.5", features = ["serde"] }
sqlite-core = "0.9"
sqlite-forensic = "0.9"
thiserror = "2"
rust_xlsxwriter = "0.96"
chrono-tz = "0.10"
calamine = "0.34"
flate2 = "1"
brotli = "8"
ruzstd = "0.8"

[workspace.lints.rust]
# Forbid unsafe across the suite — these crates parse untrusted browser artifacts;
# the code is unsafe-free and stays that way (Paranoid Gatekeeper). Earns the
# `unsafe-forbidden` README badge.
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
# Paranoid Gatekeeper: these crates parse untrusted, attacker-controllable
# browser artifacts (SQLite pages, SNSS sessions, mozLz4 blobs). The bar is
# never panic, never read out of bounds, never trust a length field.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# Panic-free production code: no unwrap/expect outside tests.
unwrap_used = { level = "deny", priority = 0 }
expect_used = { level = "deny", priority = 0 }
# Pragmatic allows — stylistic pedantic lints that fight the domain.
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
# Subjective style lints (matches the memory-forensic / vhdx allow set) — not
# safety-relevant; left to author discretion rather than churned fleet-wide.
unreadable_literal = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
items_after_statements = { level = "allow", priority = 1 }
# `match { Ok(x)=>x, Err(_)=>return/continue }` vs `let Ok(x)=.. else {..}` is a
# style preference; the existing match form is clear and behavior-identical.
manual_let_else = { level = "allow", priority = 1 }
# `s.push_str(&format!(..))` vs `write!(s, ..)` — writing to a String is
# infallible, so the former is the clearer idiom here.
format_push_string = { level = "allow", priority = 1 }
# CLI subcommand handlers and the integrity-check family keep a uniform
# `-> Result<()>` signature so the dispatcher calls them identically, even
# where one handler currently never errors.
unnecessary_wraps = { level = "allow", priority = 1 }
