[package]
name = "browser-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"
browser-forensic-firefox = { path = "../crates/browser-forensic-firefox" }
browser-forensic-chrome = { path = "../crates/browser-forensic-chrome" }
browser-forensic-safari = { path = "../crates/browser-forensic-safari" }
browser-forensic-carve = { path = "../crates/browser-forensic-carve" }
browser-forensic-integrity = { path = "../crates/browser-forensic-integrity" }
browser-forensic-triage = { path = "../crates/browser-forensic-triage" }
browser-forensic-core = { path = "../crates/browser-forensic-core" }

# One target per parsed structure. Each invariant is "must not panic".
# The SNSS targets (records, navigation) moved to the standalone snss-forensic repo.

[[bin]]
name = "fuzz_firefox_session"
path = "fuzz_targets/fuzz_firefox_session.rs"
test = false
doc = false

[[bin]]
name = "fuzz_carve_sqlite"
path = "fuzz_targets/fuzz_carve_sqlite.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sqlite_history"
path = "fuzz_targets/fuzz_sqlite_history.rs"
test = false
doc = false

[[bin]]
name = "fuzz_integrity"
path = "fuzz_targets/fuzz_integrity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_forensic"
path = "fuzz_targets/fuzz_forensic.rs"
test = false
doc = false
