[package]
name = "browser-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"
browser-forensic-firefox = { path = "../crates/browser-forensic-firefox" }
browser-forensic-chrome = { path = "../crates/browser-forensic-chrome" }
browser-forensic-safari = { path = "../crates/browser-forensic-safari" }
browser-forensic-carve = { path = "../crates/browser-forensic-carve" }
browser-forensic-integrity = { path = "../crates/browser-forensic-integrity" }
browser-forensic-triage = { path = "../crates/browser-forensic-triage" }
browser-forensic-cache = { path = "../crates/browser-forensic-cache" }
browser-forensic-reconstruct = { path = "../crates/browser-forensic-reconstruct" }
browser-forensic-core = { path = "../crates/browser-forensic-core" }
browser-forensic-storage = { path = "../crates/browser-forensic-storage" }
browser-forensic-search = { path = "../crates/browser-forensic-search" }
browser-forensic-decrypt = { path = "../crates/browser-forensic-decrypt" }
serde_json = "1"

# One target per parsed structure. Each invariant is "must not panic".
# The SNSS targets (records, navigation) moved to the standalone snss-forensic repo.

[[bin]]
name = "fuzz_firefox_session"
path = "fuzz_targets/fuzz_firefox_session.rs"
test = false
doc = false

[[bin]]
name = "fuzz_decrypt_asn1"
path = "fuzz_targets/fuzz_decrypt_asn1.rs"
test = false
doc = false

[[bin]]
name = "fuzz_decrypt_dpapi"
path = "fuzz_targets/fuzz_decrypt_dpapi.rs"
test = false
doc = false

[[bin]]
name = "fuzz_carve_sqlite"
path = "fuzz_targets/fuzz_carve_sqlite.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sqlite_history"
path = "fuzz_targets/fuzz_sqlite_history.rs"
test = false
doc = false

[[bin]]
name = "fuzz_integrity"
path = "fuzz_targets/fuzz_integrity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sqlite_header"
path = "fuzz_targets/fuzz_sqlite_header.rs"
test = false
doc = false

[[bin]]
name = "fuzz_forensic"
path = "fuzz_targets/fuzz_forensic.rs"
test = false
doc = false

[[bin]]
name = "fuzz_network_persistent_state"
path = "fuzz_targets/fuzz_network_persistent_state.rs"
test = false
doc = false

[[bin]]
name = "fuzz_transport_security"
path = "fuzz_targets/fuzz_transport_security.rs"
test = false
doc = false

[[bin]]
name = "fuzz_reporting_and_nel"
path = "fuzz_targets/fuzz_reporting_and_nel.rs"
test = false
doc = false

[[bin]]
name = "fuzz_firefox_site_security"
path = "fuzz_targets/fuzz_firefox_site_security.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cache_entry"
path = "fuzz_targets/fuzz_cache_entry.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cache_decompress"
path = "fuzz_targets/fuzz_cache_decompress.rs"
test = false
doc = false

[[bin]]
name = "fuzz_firefox_cache2"
path = "fuzz_targets/fuzz_firefox_cache2.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cachestorage"
path = "fuzz_targets/fuzz_cachestorage.rs"
test = false
doc = false

[[bin]]
name = "fuzz_safari_response_object"
path = "fuzz_targets/fuzz_safari_response_object.rs"
test = false
doc = false

[[bin]]
name = "fuzz_indexeddb_v8"
path = "fuzz_targets/fuzz_indexeddb_v8.rs"
test = false
doc = false

[[bin]]
name = "fuzz_indexeddb_key"
path = "fuzz_targets/fuzz_indexeddb_key.rs"
test = false
doc = false

[[bin]]
name = "fuzz_reconstruct_html"
path = "fuzz_targets/fuzz_reconstruct_html.rs"
test = false
doc = false

[[bin]]
name = "fuzz_reconstruct_warc"
path = "fuzz_targets/fuzz_reconstruct_warc.rs"
test = false
doc = false

[[bin]]
name = "fuzz_search_ioc"
path = "fuzz_targets/fuzz_search_ioc.rs"
test = false
doc = false
