[package]
name = "browser-carve"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
browser-core = { path = "../browser-core" }
browser-integrity = { path = "../browser-integrity" }
rusqlite = { workspace = true }
forensicnomicon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
