[package]
name = "browser-carve"
version = "0.1.0"
description = "Browser artifact carving and recovery from SQLite free pages, WAL files, and binary formats"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
browser-core = { version = "0.1.0", path = "../browser-core" }
browser-integrity = { version = "0.1.0", path = "../browser-integrity" }
rusqlite = { workspace = true }
forensicnomicon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
