[package]
name = "browser-chrome"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
browser-core = { path = "../browser-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
snss-core = { path = "../snss-core" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
