[package]
name = "browser-chrome"
version = "0.1.0"
description = "Chromium-family (Chrome, Edge, Brave, Opera) browser artifact parsers"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
browser-core = { version = "0.1.0", path = "../browser-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
snss-core = { version = "0.1.0", path = "../../../snss-forensic/core" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
