[package]
name = "browser-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
forensicnomicon = { workspace = true }

[lints]
workspace = true
