[package]
name        = "browser-discovery"
version     = "0.1.0"
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[dependencies]
browser-core = { version = "0.1.0", path = "../browser-core" }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
