[package]
name        = "browser-discovery"
version     = "0.1.0"
description  = "Auto-detection of browser profiles on the local filesystem"
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true

[dependencies]
browser-core = { version = "0.1.0", path = "../browser-core" }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
