[package]
name = "browser-forensic-carve"
version = "0.3.0"
description = "Browser artifact carving and recovery from SQLite free pages, WAL files, and binary formats"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
browser-forensic-core = { version = "0.3.0", path = "../browser-forensic-core" }
browser-forensic-integrity = { version = "0.2.1", path = "../browser-forensic-integrity" }
rusqlite = { workspace = true }
sqlite-core = { workspace = true }
sqlite-forensic = { workspace = true }
forensicnomicon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
