[package]
name = "browser-forensic-chrome"
version = "0.1.1"
description = "Chromium-family (Chrome, Edge, Brave, Opera) browser artifact parsers"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
browser-forensic-core = { version = "0.1.1", path = "../browser-forensic-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
snss-core = "0.1.0"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
