[package]
name = "browser-forensic-chrome"
version = "0.2.0"
description = "Chromium-family (Chrome, Edge, Brave, Opera) browser artifact parsers"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
browser-forensic-core = { version = "0.2.0", path = "../browser-forensic-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
snss-core = "0.1.0"
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
