[package]
name = "browser-forensic-cli"
version = "0.1.1"
description = "br4n6 / bw — dual-mode browser-forensic tool: a scriptable CLI (history, cookies, downloads, integrity, carve, triage) and a Midnight-Commander-style, vi-keyed TUI for on-disk browser history and session state"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[lib]
name = "browser_forensic_cli"
path = "src/lib.rs"

[[bin]]
name = "br4n6"
path = "src/main.rs"

[dependencies]
snss-core = "0.1.0"
browser-forensic-core = { version = "0.1.1", path = "../browser-forensic-core" }
browser-forensic-chrome = { version = "0.1.1", path = "../browser-forensic-chrome" }
browser-forensic-firefox = { version = "0.1.1", path = "../browser-forensic-firefox" }
browser-forensic-safari = { version = "0.1.1", path = "../browser-forensic-safari" }
browser-forensic-discovery = { version = "0.1.1", path = "../browser-forensic-discovery" }
browser-forensic-integrity = { version = "0.1.1", path = "../browser-forensic-integrity" }
browser-forensic-carve = { version = "0.1.1", path = "../browser-forensic-carve" }
browser-forensic-triage = { version = "0.1.1", path = "../browser-forensic-triage" }
ratatui = "0.30"
crossterm = "0.29"
arboard = "3.6"
open = "5"
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }
lz4_flex = { workspace = true }

[lints]
workspace = true
