[package]
name = "browser-forensic-core"
version = "0.1.1"
description = "Core types for browser forensic analysis"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tempfile = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
forensicnomicon = { workspace = true }

[lints]
workspace = true
