[package]
name = "browser-forensic-decrypt"
version = "0.2.0"
description = "Opt-in decryption of Firefox NSS, macOS Chromium (v10) and Windows Chromium (v10/v11 AES-256-GCM via DPAPI) encrypted browser secrets — RustCrypto only, never fabricates plaintext"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
browser-forensic-core = { version = "0.2.0", path = "../browser-forensic-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Windows DPAPI format + crypto (master-key file KDF, blob decrypt, Local State
# key) delegated to the audited, impacket-validated fleet crate — DRY, never
# hand-roll (Paranoid Gatekeeper). Local State JSON extraction stays in this crate.
dpapi-core = "0.2"
# RustCrypto — audited primitives only; NEVER hand-roll (Paranoid Gatekeeper).
aes = "0.8"
aes-gcm = "0.10"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
des = "0.8"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = { workspace = true }
# ASN.1 (DER) — a safe, fuzz-hardened parser for the untrusted NSS blobs.
der = "0.7"
base64 = "0.22"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
